--- a/doc/tutorial/tutorial-export.tex
+++ b/doc/tutorial/tutorial-export.tex
@@ -6,18 +6,18 @@ For some studies, VDJ designations are very important.
 In the list and in the sequence panel, those designations are written in their
 short form.
 
-\question{Put the mouse cursor over a clone. In the status bar (between the
+\question{Put the mouse cursor over a clonotype. In the status bar (between the
   grid and the sequence panel), the complete designation appears.}
 
 We can double check this designation with other popular software.
-\question{Select a few clones of the same locus.} % issue #5007
+\question{Select a few clonotypes of the same locus.} % issue #5007
 \marginpar{This requires an internet connection.}
 \question{Hover the spin icon in the aligner panel header. Click on the {IMGT/V-QUEST} button. The
-  clone sequences are sent to IMGT/V-QUEST.}
+  clonotype sequences are sent to IMGT/V-QUEST.}
 \question{Then tick the checkbox 5'V/D/3'J. In the sequence panel the boundaries of
   the V(D)J genes as computed by IMGT/V-QUEST are underlined.}
   
-Note that data returned by IMGT/V-QUEST is available by clicking on the \textit{i} icon of analyzed clones,
+Note that data returned by IMGT/V-QUEST is available by clicking on the \textit{i} icon of analyzed clonotypes,
 enabling you to compare the annotations made by the original software and by IMGT/V-QUEST. 
 
 
@@ -43,7 +43,7 @@ and we will try to improve the designation algorithm.
 
 \question{Go in the \com{Help} menu and click on \com{get
     support}. It opens your mailer with a pre-composed email
-    describing the data you are on as well as the clones you selected.}.
+    describing the data you are on as well as the clonotypes you selected.}.
 
 Even if you do not use the \com{get support} button, it's a good practise
 to send the complete address showing in your web browser, such
@@ -53,11 +53,11 @@ when you want to discuss with colleagues or with us your data or your analyses.
 \bigskip
 
 Suppose that you would like to change the VDJ designation shown on the web application.
-\question{Click on the \textit{i} icon in the list of clones for the clone you
+\question{Click on the \textit{i} icon in the list of clonotypes for the clonotype you
   want to change the designation. In the segmentation part, click the edit
   button. Choose what you would like to modify.}
 
-Beware: the modifications you made (name changes, clusters, clone
+Beware: the modifications you made (name changes, clusters, clonotype
 tagging, sample reordering\dots) will \textbf{not} be automatically saved. You have to save
 your changes by yourself either by clicking on \com{save patient} in the top left menu (where the
 ``patient'' name is written) or by using the \texttt{Ctrl+S} keyboard
@@ -125,13 +125,13 @@ Select the major TRG clonotype of last timepoint.
 
 Note that AIRR export file will contain only line for samples where the clonotype is present.
 
-\question{ Select some clones and align them. The alignment can be
+\question{ Select some clonotypes and align them. The alignment can be
   exported with the \com{export aligned fasta} button in the
   \com{import/export} menu.}
 % lever un message flash si export selected airr sans selection active.
 
 
-Open a detailed description of it by clicking in the {i icon} present in the clone list row or in the segmenter panel if already selected (You can also open it by double clicking on it from the plot view).
+Open a detailed description of it by clicking in the {i icon} present in the clonotype list row or in the segmenter panel if already selected (You can also open it by double clicking on it from the plot view).
 
 
 At the line clonotype size, click on download icon and wait a little. 
