tutorial: add a small part on QC

--- a/doc/tutorial/mastering-vidjil.tex
+++ b/doc/tutorial/mastering-vidjil.tex
@@ -104,7 +104,7 @@ The section~\ref{sec:tracking} will deal with the comparison of several samples.
 \input{tutorial-server}
 \input{tutorial-several-samples}
 \input{tutorial-export}
-
+\input{tutorial-qc}
 
 \vfill
 \flushright \it Aurélien Béliard, Aurélie Caillault, Marc Duez, Mathieu Giraud, Tatiana Rocher, Mikaël Salson, Florian Thonier
