tuto: move command to common-headers

--- a/doc/tutorial/common-headers.tex
+++ b/doc/tutorial/common-headers.tex
@@ -32,6 +32,8 @@
 \newcounter{questionum}
 \setcounter{questionum}{0}
 
+\RenewDocumentEnvironment{verbatim}{+b}{}
+
 % \renewenvironment{verbatim}{\tiny\color{gray}\VerbatimEnvironment\begin{Verbatim}}{\end{Verbatim}}
 % \renewenvironment{verbatim}{\tiny\color{gray}\VerbatimEnvironment\begin{Verbatim}[lastline=1]}{\end{Verbatim}}
 
