tuto: update author

--- a/doc/tutorial/mastering-vidjil.tex
+++ b/doc/tutorial/mastering-vidjil.tex
@@ -125,8 +125,8 @@ The section~\ref{sec:tracking} will deal with the comparison of several samples.
 \input{tutorial-qc}
 
 \vfill
-\flushright \it Aurélien Béliard, Aurélie Caillault, Marc Duez, Mathieu Giraud, Tatiana Rocher, Mikaël Salson, Florian Thonier
-\\ \texttt{contact@vidjil.org}
+\flushright \it Aurélien Béliard, Aurélie Caillault, Clément Chesnin, Marc Duez, Mathieu Giraud, Tatiana Rocher, Mikaël Salson, Florian Thonier
+\\ \texttt{support@vidjil.org}
 
 
 \begin{verbatim}
