--- a/doc/tutorial/tutorial-several-samples.tex
+++ b/doc/tutorial/tutorial-several-samples.tex
@@ -136,13 +136,13 @@ If you have many samples, you may wish to reorder the samples.
 
 \end{verbatim}
 
-It is possible to hide some samples to have a better view of your analysis. This can be very usefull to hide for example samples without a clonotype.
-Another case of usage is to load a run analysis with a lot of sample, and to restrict the list of active samples to retain only one that share a particular clonotype.
+It is possible to hide some samples to have a better view of your analysis. This can be very useful to hide for example samples without a clonotype.
+Another case of usage is to load a run analysis with a lot of samples, and to restrict the list of active samples to retain only one that share a particular clonotype.
 
 Open the menu to the upper right corner of graph. you can see that their are 3 buttons and 5 entries in the list corresponding to the list of samples.
 See the effet of the button here
 The name dispayed in the list is set accordingly with the settings choice for \textit{samples key}.
-\question{Hover a sample name in the list. See what happend.}
+\question{Hover a sample name in the list. See what happens.}
 \begin{verbatim}
   ////////////////////
   // test_C_samples_06
@@ -151,7 +151,9 @@ The name dispayed in the list is set accordingly with the settings choice for \t
 
 \end{verbatim}
 
-\question{It is possible to switch the current sample showed by clicking on corresponding line LIL-L3-3. What happened ?}
+\question{In this box, click on the entry labeled \com{LIL-L3-3}. When you
+have many samples this is another way to switch samples as sample names in the
+graph may be hardly readable in such a case.}
 \begin{verbatim}
   ///////////////////////////////////////////////////
   // test_C_samples_07_switch_current_sample_by_click
@@ -167,14 +169,15 @@ The name dispayed in the list is set accordingly with the settings choice for \t
 
 
 \end{verbatim}
-It is also possible to switch on/off the status of a sample by clicking on the checkbox, double clicking on the line, or double clicking on the label in the timeline graph.
+It is also possible to hide/show a sample by clicking on the checkbox, by
+double clicking on the line, or by double clicking on the label in the timeline graph.
 
 \bigskip
 
 You may also want to compare two samples, either to check a replicate, to check for possible contaminations, or to
 compare different research or medical situations.
 
-\question{In the \com{color by} menu, choose \com{by size}. Select a different
+\question{In the \com{color by} menu, choose \com{Size}. Select a different
   sample. What happens ? Are there some clonotypes with a significant different concentration in both samples ?
 Revert the color by choosing \com{by tag}.}
 \begin{verbatim}
@@ -194,7 +197,7 @@ Another option is to directly plot a log-log curve comparing two samples.
 
 \question{In the \com{plot} menu, choose the preset \com{compare two samples}. Click
   successively on two labels in the time graph to select the samples to be compared.
-  Are there again some clonotypes with a significant different concentration in both samples ?}
+  Are there again some clonotypes with significant different concentrations in both samples ?}
 \begin{verbatim}
   ///////////////////////////////////
   // test_C_samples_09_compare_sample
