--- a/doc/tutorial/mastering-vidjil.tex
+++ b/doc/tutorial/mastering-vidjil.tex
@@ -57,20 +57,24 @@ or by any other algorithm.}
 \bigskip
 
 This tutorial is composed of three parts:
-
 the first one about uploading and managing data from several samples on the platform,
-and the two last ones about the visualisation
-part for browsing and analysing clones, the second part
-(p.~\pageref{sec:part2}) on the usage of multiple samples and on exporting
-data.
+and the two last ones about the visualization
+part for browsing and analyzing clones one one
+or multiple samples.
+% (p.~\pageref{sec:part2}) on the usage of multiple samples and on exporting
+% data.
 
-You can directly go to the part of the tutorials you are more interested in
-but bear in mind
-that the first part of the software uses a dataset that is
+You can directly go to the part of the tutorials you are more interested in.
+Bear in mind
+that the first part of the tutorial uses a dataset that is
 provided at the start
 while the other parts uses a toy dataset
 already available on \texttt{app.vidjil.org}.
 % that is provided at the start of the second part.
+
+Main help page of the Vidjil
+platform: \url{https://www.vidjil.org/doc/user}
+
 
 \tableofcontents
 
@@ -81,7 +85,17 @@ already available on \texttt{app.vidjil.org}.
 \input{tutorial-server}
 \input{tutorial-qc}
 
+\bigskip
 
+
+\vfill
+
+\centerline{\includegraphics[width=.5\textwidth]{./grid-1}}
+
+\vfill
+
+\newpage ~
+\newpage
 
 \chapter{Part 2 --  Browsing and analyzing clones in one sample}
 
@@ -91,13 +105,7 @@ already available on \texttt{app.vidjil.org}.
 \input{tutorial-quality}
 \input{tutorial-clones}
 
-\bigskip
 
-\bigskip
-
-\centerline{\includegraphics[width=.5\textwidth]{./grid-1}}
-
-\newpage
 
 \chapter{Part 3 -- Analyzing multiple samples, exporting data}
 
