--- a/doc/tutorial/tutorial-qc.tex
+++ b/doc/tutorial/tutorial-qc.tex
@@ -1,13 +1,16 @@
 \section{Controlling the quality of a run}
 
+
 Go to the \com{runs} section, using the button at the top of the page.
 For the \textit{Run 1} that you have created at the beginning of this part,
 click on the table icon that corresponds to the \textit{Preview/quality
 control}.
 
-This offers a global view on the run.
+This offers a global view on the run. 
+\marginpar{The same page is
+also available on patients and sets.}
 
-\question{The \com{Clonotypes $\geq 5\,\%$} show the number of clonotypes that
+\question{The \com{Clonotypes $\geq 5\,\%$} shows the number of clonotypes that
 reach a quantification of at least 5\,\% in their own locus. This helps you
 identify the polyclonality of a sample.}
 
